--- a/assets/layouts/userdefined.html
+++ b/assets/layouts/userdefined.html
@@ -2,7 +2,7 @@
 layout: slide
 ---
 {{{ slide.content  }}}
-<div style='position:absolute;bottom:30%'>
+<div style='position:absolute;bottom:50%;left:30%;font-size:30px'>
   {{{slide.center.html}}}
 </div>
 
